[package]
name = "resa-inventory-mapping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = { version = "1.3.0", features = [] }
itertools = "0.11.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0"
shopify_api = "0.4.6"
tokio = { version = "1.32.0", features = ["full"] }
